sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: Missing closing brace `}' assumed here
var nbValeurs=getNombresValeurs()
^AlgBubbleSort1:2: error: expected class or object definition
var nbValeurs=getNombresValeurs()
^AlgBubbleSort1:3: error: expected class or object definition
fin = 0
^AlgBubbleSort1:4: error: expected class or object definition
test = false
^AlgBubbleSort1:6: error: expected class or object definition
def bubbleSort()  {
^